--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -76,7 +76,7 @@
           <li>
             <a href="#sample04"
               >03. 문자열 메서드 : 변경:trim() :문자열 앞뒤 공백 제거 : 반환
-              (문자열)</a
+              (문자열)★</a
             >
           </li>
           <li>
@@ -95,7 +95,7 @@
           <li>
             <a href="#sample04"
               >04. 문자열 메서드 : 변경:slice() :문자열 원하는 값을 추출 : 반환
-              (문자열)</a
+              (문자열)★★</a
             >
           </li>
           <li>
@@ -114,13 +114,14 @@
           <li>
             <a href="#sample04"
               >05. 문자열 메서드 : 변경:split() :문자열에 원하는 값을 추출 :
-              반환 (배열)</a
+              반환 (배열)★★★</a
             >
           </li>
 
           <li>
             <a href="#sample04"
-              >06. 문자열 메서드 : 변경:replace() :문자열 변경: 반환 (문자열)</a
+              >06. 문자열 메서드 : 변경:replace() :문자열 변경: 반환
+              (문자열)★</a
             >
           </li>
           <li>
@@ -155,7 +156,7 @@
           <li>
             <a href="#sample05"
               >10. 문자열 메서드 : 검색:indexOf() : 문자열 특정문자의 위치를
-              찾음:반환 (숫자)</a
+              찾음:반환 (숫자)★</a
             >
           </li>
           <li>
@@ -167,14 +168,14 @@
           <li>
             <a href="#sample08"
               >11. 문자열 메서드 : 검색: includes():문자열 포함여부 검색:반환
-              불린</a
+              (불린)★</a
             >
           </li>
 
           <li>
             <a href="#sample06"
               >12. 문자열 메서드 : 검색: search():문자열을 검색 정규식:반환
-              (숫자)</a
+              (숫자)★</a
             >
           </li>
           <li>
@@ -192,19 +193,19 @@
           </li>
           <li>
             <a href="#sample05"
-              >12. 문자열 메서드 : 검색: charCodeAt() : 지정한 인텍스의 문자를
+              >14. 문자열 메서드 : 검색: charCodeAt() : 지정한 인텍스의 문자를
               추출 :반환 (숫자)</a
             >
           </li>
           <li>
             <a href="#sample09"
-              >12. 문자열 메서드 : 검색: starsWith():문자열 포함여부 검색:반환
+              >15. 문자열 메서드 : 검색: startsWith():문자열 포함여부 검색:반환
               (불린)</a
             >
           </li>
           <li>
             <a href="#sample10"
-              >12. 문자열 메서드 : 검색: endsWith():문자열 포함 여부 검색: 반환
+              >15. 문자열 메서드 : 검색: endsWith():문자열 포함 여부 검색: 반환
               (불린)</a
             >
           </li>
