--- a/javascript/javascript06.html
+++ b/javascript/javascript06.html
@@ -70,11 +70,16 @@
                 <li><a href="#sample10">10. 배열 메서드 : reduce(): 배열요소를 하나로 정리: 반환(결과값)</a></li>
                 <li><a href="#sample11">11. 배열 메서드 : reduceRight() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
 
-                <li><a href="#sample11">11. 배열 메서드 : slice() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
-                <li><a href="#sample11">11. 배열 메서드 : splice() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
-                <li><a href="#sample11">11. 배열 메서드 : indexOf() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
-                <li><a href="#sample11">11. 배열 메서드 : lastIndexOf() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
-                <li><a href="#sample11">11. 배열 메서드 : () : 배열요소를 하나로 정리: 반환(결과값)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : slice() : 배열요소를 하나로 정리: 반환(배열)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : splice() : 배열요소를 하나로 정리: 반환(배열)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : indexOf() : 배열 요소를 검색할 때 : 반환(숫자)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : lastIndexOf() : 배열 요소를 끝에서 검색할 때 : 반환(숫자)</a></li>
+                
+                <li><a href="#sample11"> 10. 배열 메서드 : includes() : 배열 요소를 검색할 때 : 반환(불린)</a></li>
+                <li><a href="#sample11">10. 배열 메서드 : find() : 배열 요소를 검색할 때 : 반환(요소)</a></li>
+                <li><a href="#sample11">10. 배열 메서드 : findIndex() : 배열 요소를 검색할 때 : 반환(숫자)</a></li>
+                <li><a href="#sample11">10. 배열 메서드 : filter() : 조건에 만족하는 배열 요소를 검색할 때 : 반환(배열)</a></li>
+                <li><a href="#sample11">10. 배열 메서드 : map() : 배열 요소를 추출하여 새로운 배열로 만듦 : 반환(배열)</a></li>
 
 
 
