--- a/javascript/javascript07.html
+++ b/javascript/javascript07.html
@@ -57,19 +57,42 @@
     <main id="main">
       <div class="main_menu"></div>
       <ul>
-        <li><a href="#sampe">01. 수학 메서드 : Math.round()</a></li>
-        <li><a href="#sampe">02. 수학 메서드 : Math.floor()</a></li>
-        <li><a href="#sampe">03. 수학 메서드 : Math.ceil()</a></li>
-        <li><a href="#sampe">04. 수학 메서드 : Math.max()</a></li>
-        <li><a href="#sampe">05. 수학 메서드 : Math.min()</a></li>
-        <li><a href="#sampe">06. 수학 메서드 : Math.abs()</a></li>
-        <li><a href="#sampe">08. 수학 메서드 : Math.trulc()</a></li>
-        <li><a href="#sampe">07. 수학 메서드 : Math.random()</a></li>
-        <li><a href="#sampe">08. 수학 메서드 : Math.()</a></li>
-        <li><a href="#sampe">09. 수학 메서드 : Math.()</a></li>
-        <li><a href="#sampe">10. 수학 메서드 : Math.()</a></li>
-        <li><a href="#sampe">11. 수학 메서드 : Math.()</a></li>
-        <li><a href="#sampe">12. 수학 메서드 : Math.()</a></li>
+        <li>
+          <a href="#">01. 수학 메서드 : Math.round() : 반올림 : 반환(숫자)</a>
+        </li>
+        <li>
+          <a href="#">02. 수학 메서드 : Math.floor() : 버림 : 반환(숫자)</a>
+        </li>
+        <li>
+          <a href="#">03. 수학 메서드 : Math.ceil() : 올림 : 반환(숫자)</a>
+        </li>
+        <li>
+          <a href="#"
+            >04. 수학 메서드 : Math.max() : 가장 큰 값 반환 : 반환(숫자)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >05. 수학 메서드 : Math.min() : 가장 작은 값 반환 : 반환(숫자)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >06. 수학 메서드 : Math.abs() : 절댓값 반환 : 반환(숫자)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >06. 수학 메서드 : Math.trulc() : 값의 정수 부분만 반환 :
+            반환(숫자)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >07. 수학 메서드 : Math.random() : 랜덤값 반환(0-1사이에 난수 값을
+            반환) : 반환(숫자)</a
+          >
+        </li>
       </ul>
       <div class="main_script"></div>
       <div class="main_desc"></div>
@@ -80,5 +103,10 @@
       <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
+    <script src="assets/js/highlight.min.js"></script>
+    <script>
+      hljs.highlightAll();
+    </script>
+    <script></script>
   </body>
 </html>
