--- a/javascript/javascript09.html
+++ b/javascript/javascript09.html
@@ -57,18 +57,98 @@
     <main id="main">
       <div class="main_menu"></div>
       <ul>
-        <li><a href="#sampe">01. if문</a></li>
-        <li><a href="#sampe">02. </a></li>
-        <li><a href="#sampe">03</a></li>
-        <li><a href="#sampe">04</a></li>
-        <li><a href="#sampe">05</a></li>
-        <li><a href="#sampe">06</a></li>
-        <li><a href="#sampe">07</a></li>
-        <li><a href="#sampe">08</a></li>
-        <li><a href="#sampe">09</a></li>
-        <li><a href="#sampe">10</a></li>
-        <li><a href="#sampe">11. break문</a></li>
-        <li><a href="#sampe">12. continue문</a></li>
+        <li>
+          <a href="#"
+            >01. 브라우저 속성 : window.innerWidth : 브라우저의 가로값(스크롤바
+            미포함)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >02. 브라우저 속성 : window.innerHeight : 브라우저의 높이값(스크롤바
+            미포함)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >03. 브라우저 속성 : window.outerWidth : 브라우저의 가로값(스크롤바
+            포함)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >04. 브라우저 속성 : window.outerHeight : 브라우저의 높이값(스크롤바
+            포함)</a
+          >
+        </li>
+        <br />
+
+        <li>
+          <a href="#"
+            >05. 브라우저 속성 : window.pageXOffset : 가로 스크롤 값(브라우저
+            기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >06. 브라우저 속성 : window.pageYOffset : 세로 스크롤 값(브라우저
+            기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >07. 브라우저 속성 : window.scrollX : 가로 스크롤 값(브라우저
+            기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >08. 브라우저 속성 : window.scrollY : 세로 스크롤 값(브라우저
+            기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >08. 브라우저 속성 : document.documentElement.scrollLeft : 가로
+            스크롤 값(브라우저 기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >08. 브라우저 속성 : document.documentElement.scrollTop : 세로
+            스크롤 값(브라우저 기준)</a
+          >
+        </li>
+        <br />
+
+        <li>
+          <a href="#">09. 브라우저 메서드 : window.scroll() : 스크롤 값 설정</a>
+        </li>
+        <li>
+          <a href="#"
+            >10. 브라우저 메서드 : window.scrollTo() : 스크롤 값 설정(절대
+            기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >11. 브라우저 메서드 : window.scrollBy()) : 스크롤 값 설정(상대
+            기준)</a
+          >
+        </li>
+        <br />
+        <li>
+          <a href="#">12. 요소 속성 : element.scrollLeft()) : 가로 스크롤 값</a>
+        </li>
+        <li>
+          <a href="#">13. 요소 속성 : element.scrollTop()) : 세로 스크롤 값</a>
+        </li>
+        <li>
+          <a href="#"
+            >14. 요소 메서드 : element.scrollIntoView()) : 스크롤 이동 및
+            설정</a
+          >
+        </li>
       </ul>
       <div class="main_script"></div>
       <div class="main_desc"></div>
@@ -79,5 +159,10 @@
       <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
+    <script src="assets/js/highlight.min.js"></script>
+    <script>
+      hljs.highlightAll();
+    </script>
+    <script></script>
   </body>
 </html>
