--- a/javascript/javascript10.html
+++ b/javascript/javascript10.html
@@ -50,306 +50,241 @@
           <li><a href="study/element.html">요소선택</a></li>
           <li><a href="study/laytag.html">구조관련요소</a></li>
         </ul>
-        <div class="main_menu">
-          <ul>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 선택자: document.querySelector() :
-                요소선택자</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >02. 요소메서드 : 선택자: document.querySelectorAll() : 모든
-                요소선택자</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >03. 요소메서드 : 선택자: document.getElementById() : 아이디
-                요소 선택자</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >04. 요소메서드 : 선택자: document.getElementByClassName() :
-                클래스 요소 선택자</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >04. 요소메서드 : 선택자: document.getElementByTagName() : 태그
-                요소 선택자</a
-              >
-            </li>
-            <br />
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 텍스트: innnerText() : 요소에 텍스트
-                설정하기</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >02. 요소메서드 : 텍스트: innnerContent() : 요소에 텍스트
-                설정하기</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >03. 요소메서드 : 텍스트: innnerHtml() : 요소에 텍스트(태그인식)
-                설정하기</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >04. 요소메서드 : 텍스트: outerHtml() : 요소에 텍스트(태그인식)
-                설정하기</a
-              >
-            </li>
-            <br />
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 클래스: classList.add() : 클래스 추가하기</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >02. 요소메서드 : 클래스: classList.remove() : 클래스
-                삭제하기</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >03. 요소메서드 : 클래스: classList.toggle() : 클래스
-                추가/삭제하기</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >04. 요소메서드 : 클래스: classList.contains() : 클래스 존재
-                여부 확인하기</a
-              >
-            </li>
-            <br />
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치:element.clientWidth : 요소의
-                가로값</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >02. 요소메서드 :크기 위치:element.clientHeight: 요소의
-                높이값</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >03. 요소메서드 :크기 위치:element.clientTop :요소의 Y축값</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >04. 요소메서드 : 크기 위치:element.clientLeft : 요소의 X축값</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치:element.offWidth : 요소의 가로값</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치:element.offHeight : 요소의 높이값</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치:element.offTop : 요소의 Y축값</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치:element.offLeft :요소의 X축값</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치:element.getBoundingClientRect():
-                크기및위치</a
-              >
-            </li>
-            <br />
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.innerWidth: 브라우저
-                가로값(스크롤바미포함)</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.innerHeight: 브라우저
-                높이값(스크롤바미포함)</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.innerWidth: 브라우저
-                가로값(스크롤바미포함)</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.innerHeight: 브라우저
-                높이값(스크롤바미포함)</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.pageXOffset: 가로
-                스크롤값(브라우저 기준)</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.pageYOffset: 세로
-                스크롤값(브라우저 기준)</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.scrollX(): 가로
-                스크롤값(브라우저 기준)</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.scrollY(): 세로
-                스크롤값(브라우저 기준)</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :doucument.documentElement:
-              </a>
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.scroll(): 스크롤값 설정()</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.scrollTo(): 스크롤값
-                설정()</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :window.scrollBy(): 스크롤값
-                설정()</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :element.scrollLeft(): 가로
-                스크롤값()</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :element.scrollTop(): 가로
-                스크롤값()</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >01. 요소메서드 : 크기 위치 :element.scrollIntoView():
-                스크롤이동 설정</a
-              >
-            </li>
-          </ul>
-        </div>
       </nav>
     </header>
     <!-- //header -->
+    <br>
+    <br>
+    <div class="main_menu">
+      <ul>
+        <li>
+          <a href="#"
+            >01. 요소 메서드 : 선택자 : document.querySelector() : 요소
+            선택자(신버전)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >02. 요소 메서드 : 선택자 : document.querySelectorAll() : 모든 요소
+            선택자(신버전)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >03. 요소 메서드 : 선택자 : document.getElementById() : 아이디 요소
+            선택자(구버전)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >04. 요소 메서드 : 선택자 : document.getElementByClassName() :
+            클래스 요소 선택자(구버전)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >05. 요소 메서드 : 선택자 : document.getElementByTagName() : 태그
+            요소 선택자</a
+          >
+        </li>
+        <br />
+        <li>
+          <a href="#"
+            >01. 요소 메서드 : 텍스트 : innerText() : 요소에 텍스트 설정하기</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >02. 요소 메서드 : 텍스트 : textContent() : 요소에 텍스트
+            설정하기</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >03. 요소 메서드 : 텍스트 : innerHTML() : 요소에 텍스트(태그 인식)
+            설정하기</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >04. 요소 메서드 : 텍스트 : outerHTML() : 요소에 텍스트(태그 인식)
+            설정하기</a
+          >
+        </li>
+        <br />
+        <li>
+          <a href="#"
+            >01. 요소 메서드 : 클래스 : classList.add() : 클래스 추가하기</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >02. 요소 메서드 : 클래스 : classList.remove() : 클래스 삭제하기</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >03. 요소 메서드 : 클래스 : classList.toggle() : 클래스
+            추가/삭제하기</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >04. 요소 메서드 : 클래스 : classList.contains() : 클래스 존재 여부
+            확인하기</a
+          >
+        </li>
 
-    <main id="main">
-      <div class="main_sample">
-        <div class="container"></div>
-      </div>
+        <br />
+        <!-- 속성은 가져오는 것 밖에 못함 메서드는 값을 설정해줄 수 있음-->
+        <li>
+          <a href="#"
+            >01. 요소 속성 : 크기 및 위치 : element.clientWidth : 요소의
+            가로값(마진/보더 미포함)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >02. 요소 속성 : 크기 및 위치 : element.clientHeight : 요소의
+            높이값(마진/보더 미포함)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >03. 요소 속성 : 크기 및 위치 : element.clientTop : 요소의
+            Y축값(부모기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >04. 요소 속성 : 크기 및 위치 : element.clientLeft : 요소의
+            X축값(부모기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >05. 요소 속성 : 크기 및 위치 : element.offsetWidth : 요소의
+            가로값(보더/패딩 포함)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >06. 요소 속성 : 크기 및 위치 : element.offsetHeight : 요소의
+            높이값(보더/패딩 포함)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >07. 요소 속성 : 크기 및 위치 : element.offsetTop : 요소의
+            Y축값(문서 기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >08. 요소 속성 : 크기 및 위치 : element.offsetLeft : 요소의
+            X축값(문서 기준)</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            >09. 요소 메서드 : 크기 및 위치 : element.getBoundingClientRect() :
+            top, left, right, bottom, x, y, width, height</a
+          >
+        </li>
+      </ul>
+    </div>
       <!-- //main_menu -->
+      <div class="main_sample">
+                <div id="sample01" class="sample">
+                    <h3 class="blue">01. 위치 및 크기를 표현하는 속성 및 메서드</h3>
+                    <div class="view">
+                        <div class="sbox">
+                            <span>
+                                width: 400px<br>
+                                margin: 20px<br>
+                                border: 1px<br>
+                                padding: 20px
+                            </span>
+                        </div>
+                        <p class="sResult">여기에 결과값이 표시됩니다.</p>
+                    </div>
+                    <div class="button">
+                        <a href="#" class="btn1">박스의 가로값(clientWidth)을 구합니다.</a>
+                        <a href="#" class="btn2">박스의 높이값(clientHeight)을 구합니다.</a>
+                        <a href="#" class="btn3">박스의 Y축값(clientTop)을 구합니다.</a>
+                        <a href="#" class="btn4">박스의 X축값(clientLeft)을 구합니다.</a>
+                        <a href="#" class="btn5">박스의 가로값(offsetWidth)을 구합니다.</a>
+                        <a href="#" class="btn6">박스의 높이값(offsetHeight)을 구합니다.</a>
+                        <a href="#" class="btn7">박스의 Y축값(offsetTop)을 구합니다.</a>
+                        <a href="#" class="btn8">박스의 X축값(offsetLeft)을 구합니다.</a>
+                        <a href="#" class="btn9">박스의 X축값(getBoundingClientRect())을 구합니다.</a>
+                    </div>
+                </div>
+                <!-- //sample01 -->
+            </div>
+            <!-- //main_sample -->
+        </div>
     </main>
-    <!-- //main -->
+    <!-- main -->
 
     <footer id="footer">
       <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
-    <script>
-      const box1 = document.querySelector("#sample01 .sbox");
+ <script>
+        const box1 = document.querySelector("#sample01 .sbox");
 
-      document.querySelector("sample01_btn1").addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelector("sample01 .sResult").innerHTML =
-          "이 박스 가로값은" + box1.clientWidth + "px(마진/보더불포함)입니다.";
-      });
-      document.querySelector("sample01_btn2").addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelector("sample01 .sResult").innerHTML =
-          "이 박스  가로값은" +
-          box1.clientHeight +
-          "px(마진/보더불포함)입니다.";
-      });
-      document.querySelector("sample01_btn3").addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelector("sample01 .sResult").innerHTML =
-          "이 박스  가로값은" + box1.clientTop + "px(마진/보더불포함)입니다.";
-      });
-      document.querySelector("sample01_btn4").addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelector("sample01 .sResult").innerHTML =
-          "이 박스  가로값은" + box1.clientLeft + "px(마진/보더불포함)입니다.";
-      });
-      document.querySelector("sample01_btn5").addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelector("sample01 .sResult").innerHTML =
-          "이 박스  가로값은" + box1.clientWidth + "px(마진/보더불포함)입니다.";
-      });
-      document.querySelector("sample01_btn6").addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelector("sample01 .sResult").innerHTML =
-          "이 박스  가로값은" +
-          box1.clientHeight +
-          "px(마진/보더불포함)입니다.";
-      });
-      document.querySelector("sample01_btn7").addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelector("sample01 .sResult").innerHTML =
-          "이 박스  가로값은" + box1.clientTop + "px(마진/보더불포함)입니다.";
-      });
-      document.querySelector("sample01_btn8").addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelector("sample01 .sResult").innerHTML =
-          "이 박스  가로값은" + box1.clientLeft + "px(마진/보더불포함)입니다.";
-      });
-      document.querySelector("sample01_btn9").addEventListener("click", (e) => {
-        e.preventDefault();
-        const box = document.querySelector("sample01 .sbox");
-        const result = document.querySelector("sample01 .sResult");
-        const rect = box.getBoundingClientRect();
+        document.querySelector("#sample01 .btn1").addEventListener("click", (e) => {
+            e.preventDefault()
+            document.querySelector("#sample01 .sResult").innerHTML = "이 박스의 가로값은" + box1.clientWidth + "px(마진/보더 불포함, 패딩포함) 입니다."
+        })
+        document.querySelector("#sample01 .btn2").addEventListener("click", (e) => {
+            e.preventDefault()
+            document.querySelector("#sample01 .sResult").innerHTML = "이 박스의 높이값은" + box1.clientHeight + "px(마진/보더 불포함, 패딩포함) 입니다."
+        })
+        document.querySelector("#sample01 .btn3").addEventListener("click", (e) => {
+            e.preventDefault()
+            document.querySelector("#sample01 .sResult").innerHTML = "이 박스의 Y축값은" + box1.clientTop + "px(부모 기준) 입니다."
+        })
+        document.querySelector("#sample01 .btn4").addEventListener("click", (e) => {
+            e.preventDefault()
+            document.querySelector("#sample01 .sResult").innerHTML = "이 박스의 X축값은" + box1.clientLeft + "px(부모 기준) 입니다."
+        })
+        document.querySelector("#sample01 .btn5").addEventListener("click", (e) => {
+            e.preventDefault()
+            document.querySelector("#sample01 .sResult").innerHTML = "이 박스의 가로값은" + box1.offsetWidth + "px(보더/패딩 포함) 입니다."
+        })
+        document.querySelector("#sample01 .btn6").addEventListener("click", (e) => {
+            e.preventDefault()
+            document.querySelector("#sample01 .sResult").innerHTML = "이 박스의 높이값은" + box1.offsetHeight + "px(보더/패딩 포함) 입니다."
+        })
+        document.querySelector("#sample01 .btn7").addEventListener("click", (e) => {
+            e.preventDefault()
+            document.querySelector("#sample01 .sResult").innerHTML = "이 박스의 Y축값은" + box1.offsetTop + "px(문서 기준) 입니다."
+        })
+        document.querySelector("#sample01 .btn8").addEventListener("click", (e) => {
+            e.preventDefault()
+            document.querySelector("#sample01 .sResult").innerHTML = "이 박스의 X축값은" + box1.offsetLeft + "px(문서 기준) 입니다."
+        })
+        document.querySelector("#sample01 .btn9").addEventListener("click", (e) => {
+            e.preventDefault()
+            const box = document.querySelector("#sample01 .sbox")
+            const result = document.querySelector("#sample01 .sResult")
+            const rect = box.getBoundingClientRect();
 
-        result.innerHTML = "";
+            result.innerHTML = "";
 
-        for (let key in rect) {
-          if (typeof rect[key] !== "function") {
-            let span = document.createElement("span");
-            span.textContent = `${key}: ${rect[key]}`;
-            result.appendChild(span);
-          }
-        }
-      });
+            for(let key in rect){
+                //변수 안에 데이터 타입 아는 방법 //키값에서 함수가 아닌 것 찾기
+                if(typeof rect[key] !== "function"){
+                    //데이터 span에 넣어주기
+                    let span = document.createElement("span");
+                    span.textContent = `${key}: ${rect[key]}`;
+                    result.appendChild(span);
+                };
+            }; 
+        });
+
     </script>
   </body>
 </html>
