--- a/javascript/effect/detaEffect01.html
+++ b/javascript/effect/detaEffect01.html
@@ -1,63 +1,150 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>데이터 이펙트</title>
+    <title>Document</title>
+    
     <link rel="stylesheet" href="../assets/css/data.css">
     <link rel="stylesheet" href="../assets/css/prism.css">
     <link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet">
 </head>
-
 <body>
-    <header id="header">
+    <header id="header"> 
         <nav>
             <ul>
-                <li class="active"><a href="dataEffect01.html">1</a></li>
+                <li class="active"><a href="dataEffect01.html">1</a>
                 <li><a href="dataEffect02.html">2</a></li>
                 <li><a href="dataEffect03.html">3</a></li>
+
             </ul>
         </nav>
     </header>
-    <!-- //header -->
+    <!-- header -->
+
     <main id="main">
         <div class="container">
-            <h2>1부터 100까지 출력하기</h2>
-            <div class="test_box">
-                <h3 class="title">1.1 while문을 이용해서 1부터 100까지 출력하시요!</h3>
-                <div class="code">
-                    <pre><code class="line-numbers language-js">{
+        <h2>1부터 100까지 출력하기</h2>
+        <div class="test_box">
+            <h3 class="title">1.1 while문을 이용해서 1부터 100까지 출력하시오!</h3>
+            <div class="code">
+<pre><code class="line-numbers language-js">{
     let num = 1;
-    while(num &lt;= 100){
+    while(num &lt; = 100) {
         document.write(num);
-        num++;
+        num++
     }
 }
 </code></pre>
-                </div>
-                <div class="result">
-                    <details>
-                        <summary>결과보기</summary>
-                        <div class="sample01_result">
-                            1234566778900
-                        </div>
-                    </details>
-                </div>
+            </div>
+            <div class="result">
+                <details>
+                    <summary>결과보기</summary>
+                    <div class="sample01_result">
+                        <script>
+                            {
+                                let num = 1;
+                                while(num <= 100) {
+                                    document.write(num);
+                                    document.write("<br>");
+                                    num++
+                                }
+                            }
+                        </script>
+                    </div>
+                </details>
+            </div>
+        <div class="test_box">
+            <h3 class="title">1.2 for문을 이용해서 1부터 100까지 출력하시오!</h3>
+            <div class="code">
+<pre><code class="line-numbers language-js">for( let i=1; i&lt;=100; i++){
+    document.write(i)
+}
+</code></pre>
+            </div>
+            <div class="result">
+                <details>
+                    <summary>결과보기</summary>
+                    <div class="sample01_result">
+                        <script>
+                            for( let i=1; i<=100; i++){
+                                document.write(i)
+                                document.write("<br>");
+                            }
+                        </script>
+                    </div>
+                </details>
             </div>
         </div>
+        <div class="test_box">
+            <h3 class="title">1.3 for문을 이용해서 1부터 100까지 출력하시오!(짝수 : red, 홀수 : blue)</h3>
+            <div class="code">
+<pre><code class="line-numbers language-js">for( let i = 1; i&lt;=100; i++){
+    if (i % 2 == 0){
+        document.write("&lt;span style='color: red'&gt;"+i+"&lt;/span&gt;")
+    }else{
+        document.write("&lt;span style='color: blue'&gt;"+i+"&lt;/span&gt;")
+    }
+}               
+</code></pre>
+            </div>
+            <div class="result">
+                <details>
+                    <summary>결과보기</summary>
+                    <div class="sample01_result">
+                        <script>
+                            for( let i = 1; i<=100; i++){
+                                if (i % 2 == 0){
+                                    document.write("<span style='color: red'>"+i+"</span>")
+                                    document.write("<br>")
+                                }else{
+                                    document.write("<span style='color: blue'>"+i+"</span>")
+                                }
+                            }               
+                        </script>
+                    </div>
+                </details>
+            </div>
+        </div>
+        <div class="test_box">
+            <h3 class="title">1.4 for문을 이용해서 1부터 100까지 합을 출력하시오!</h3>
+            <div class="code">
+<pre><code class="line-numbers language-js"> let sum = 0;
+    for(let i=1; i&lt;=100; i++ ){
+        //document.write(i);
+        sum = sum + i;
+    }
+    document.write(sum);
+</code></pre>
+            </div>
+            <div class="result">
+                <details>
+                    <summary>결과보기</summary>
+                    <div class="sample01_result">
+                        <script>
+                    {let sum = 0;
+                    for(let i=1; i<=100; i++ ){
+                        //document.write(i);
+                        sum = sum + i;
+                    }
+                    document.write(sum);}
+                        </script>
+                    </div>
+                </details>
+            </div>
+        </div>
+    </div>
     </main>
-    <script src="../assets/js/prism.min.js"></script>
-
+    
+    <script src="../assets/js/prism.js"></script>
     <script>
-        for (let i = 1; i <= 100; i++) {
-            //document.write(i)
-            // sum = sum + i;
-            sum += i;
+        let sum = 0;
+        for(let i=1; i<=100; i++ ){
+            //document.write(i);
+            sum = sum + i;
         }
-        document.write(sum);
+        //document.write(sum);
     </script>
 </body>
-
 </html>
