--- a/index.html
+++ b/index.html
@@ -249,23 +249,35 @@
                 >
               </li>
               <li class="webstandard">
-                <a href="#filter-color-webstandard" data-filter-value=".class"
+                <a href="#filter-color-webstandard" data-filter-value=".script"
                   >SCRIPT</a
                 >
               </li>
               <li class="webstandard">
-                <a href="#filter-color-webstandard" data-filter-value=".class"
+                <a href="#filter-color-webstandard" data-filter-value=".layout"
                   >LAYOUT</a
                 >
               </li>
               <li class="webstandard">
-                <a href="#filter-color-webstandard" data-filter-value=".class"
+                <a href="#filter-color-webstandard" data-filter-value=".refer"
                   >REFERENCE</a
                 >
               </li>
               <li class="webstandard">
-                <a href="#filter-color-webstandard" data-filter-value=".class"
+                <a href="#filter-color-webstandard" data-filter-value=".site"
                   >SITE</a
+                >
+              </li>
+              <li class="webstandard">
+                <a
+                  href="#filter-color-webstandard"
+                  data-filter-value=".animation"
+                  >ANIMATION</a
+                >
+              </li>
+              <li class="webstandard">
+                <a href="#filter-color-webstandard" data-filter-value=".mysql"
+                  >MYSQL</a
                 >
               </li>
             </ul>
@@ -552,16 +564,16 @@
               <a href="site/index.html" target="_blank">
                 <div class="image-wrap">
                   <div class="hover-wrap">
-                    <span class="overlay-img-donut">animation</span>
-                    <span class="overlay-text-thumb-donut">애니메이션</span>
+                    <span class="overlay-img-donut">SVG</span>
+                    <span class="overlay-text-thumb-donut">SVG</span>
                     <span class="overlay-text-thumb1-donut">애니메이션</span>
-                    <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
+                    <span class="overlay-text-thumb2-donut">SVG</span>
                   </div>
                   <img src="assets/img/svg-cheeseburger.svg" alt="portfolio" />
                   <div class="img-text donutImg">
-                    <h5>animation</h5>
+                    <h5>SVG</h5>
                     <p>애니메이션</p>
-                    <span>JAVASCRIPT</span>
+                    <span>SVG</span>
                   </div>
                 </div>
               </a>
@@ -572,18 +584,16 @@
               <a href="site/index.html" target="_blank">
                 <div class="image-wrap">
                   <div class="hover-wrap">
-                    <span class="overlay-img-donut">css animation</span>
-                    <span class="overlay-text-thumb-donut">css애니메이션</span>
-                    <span class="overlay-text-thumb1-donut">css애니메이션</span>
-                    <span class="overlay-text-thumb2-donut"
-                      >csasJAVASCRIPT</span
-                    >
+                    <span class="overlay-img-donut">CSS</span>
+                    <span class="overlay-text-thumb-donut">CSS</span>
+                    <span class="overlay-text-thumb1-donut">애니메이션</span>
+                    <span class="overlay-text-thumb2-donut">CSS</span>
                   </div>
                   <img src="assets/img/svg-cheeseburger.svg" alt="portfolio" />
                   <div class="img-text donutImg">
-                    <h5>css animation</h5>
+                    <h5>CSS</h5>
                     <p>css애니메이션</p>
-                    <span>JAVASCRIPT</span>
+                    <span>CSS</span>
                   </div>
                 </div>
               </a>
@@ -593,18 +603,16 @@
               <a href="site/index.html" target="_blank">
                 <div class="image-wrap">
                   <div class="hover-wrap">
-                    <span class="overlay-img-donut">css animation</span>
-                    <span class="overlay-text-thumb-donut">css애니메이션</span>
-                    <span class="overlay-text-thumb1-donut">css애니메이션</span>
-                    <span class="overlay-text-thumb2-donut"
-                      >csasJAVASCRIPT</span
-                    >
+                    <span class="overlay-img-donut">MYSQL</span>
+                    <span class="overlay-text-thumb-donut">MYSQL</span>
+                    <span class="overlay-text-thumb1-donut">MYSQL</span>
+                    <span class="overlay-text-thumb2-donut">MYSQL</span>
                   </div>
                   <img src="assets/img/svg-cheeseburger.svg" alt="portfolio" />
                   <div class="img-text donutImg">
-                    <h5>css animation</h5>
-                    <p>css애니메이션</p>
-                    <span>JAVASCRIPT</span>
+                    <h5>MYSQL</h5>
+                    <p>MYSQL</p>
+                    <span>MYSQL</span>
                   </div>
                 </div>
               </a>
