--- a/sql/index.html
+++ b/sql/index.html
@@ -157,8 +157,8 @@
           <div class="bs-docs-section">
             <h2 id="intro3" class="page-header">MySQL 실행</h2>
             <div class="bs-callout bs-callout-info">
-              윈도우 : cs MAMP/bin/mysql/bin<br />
-              로그인 : ./mysql -uroot -proot
+              윈도우 : cd MAMP/bin/mysql/bin<br />
+              로그인 : mysql -uroot -proot
             </div>
             <pre><code class="language-js">Welcome to the MySQL monitor.  Commands end with ; or \g.
 Your MySQL connection id is 4
@@ -244,6 +244,7 @@ Query OK, 0 rows affected (0.00 sec)
     youName varchar(20) NOT NULL,
     youPass varchar(20) NOT NULL,
     youBirth int(20) NOT NULL,
+    youAge int(5) NOT NULL,
     regTime int(20) NOT NULL,
     PRIMARY KEY (myMemberID)
 ) charset=utf8;
@@ -292,24 +293,24 @@ Query OK, 0 rows affected (0.01 sec)
             <div class="bs-callout bs-callout-info">
               INSERT INTO 테이블이름(필드명) VALUE(데이터)
             </div>
-            <pre><code class="language-js">INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('webstoryboy@naver.com','황상연','1234','19990303','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('thdtjdgml415@naver.com', '송성희', '1234', '19970415', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('mo0647@naver.com', '김민정', '1234', '19970530', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('tjrwnsrkdtj@naver.com', '김석준', '1234', '19941009', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('jwor124@naver.com', '정은비', '1234', '19990303', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('leesh3432@naver.com','이영환','1234','19970205','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('sshin4882@naver.com','박현신','1234','19990303','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19970809', '04');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('kkb7528@naver.com','권규비','1234','19990303','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('piowm123@gmail.com', '문병내', '1234', '19990303', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('ghkddbwls96@gmail.com', '황유진', '1234', '19990303', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('eodnjs9605@naver.com','김대원','1234','19960530','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('wjsqhdus971007@gmail.com','전보연','1234','19971007','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('noeyheyh@gmail.com','권혜현','1234','19960331','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('hjkang306@gmail.com','강현지','1234','19990303','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('sunhey9810@gmail.com', '박선혜', '1234', '19981010', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUE('kde66034@gmail.com', '김동언', '1234', '19700101', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('praise1109@gmail.com', '이하은', '1234', '19990303', '1234567');
+            <pre><code class="language-js">INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('webstoryboy@naver.com','황상연','1234','19990303', '20','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('thdtjdgml415@naver.com', '송성희', '1234', '19970415', '20','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('mo0647@naver.com', '김민정', '1234', '19970530', '20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('tjrwnsrkdtj@naver.com', '김석준', '1234', '19941009', '20','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('jwor124@naver.com', '정은비', '1234', '19990303',' 20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('leesh3432@naver.com','이영환','1234','19970205', '20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('sshin4882@naver.com','박현신','1234','19990303',' 20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19970809', '20','04');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('kkb7528@naver.com','권규비','1234','19990303', '20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('piowm123@gmail.com', '문병내', '1234', '19990303', '20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('ghkddbwls96@gmail.com', '황유진', '1234', '19990303','20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('eodnjs9605@naver.com','김대원','1234','19960530', '20','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('wjsqhdus971007@gmail.com','전보연','1234','19971007', '20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('noeyheyh@gmail.com','권혜현','1234','19960331', '20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('hjkang306@gmail.com','강현지','1234','19990303', '20','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('sunhey9810@gmail.com', '박선혜', '1234', '19981010', '20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUE('kde66034@gmail.com', '김동언', '1234', '19700101', '20', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES('praise1109@gmail.com', '이하은', '1234', '19990303', '20', '1234567');
 </code></pre>
             <h3 id="intro6-2" class="page-header">데이터 불러오기</h3>
             <div class="bs-callout bs-callout-info">
@@ -325,7 +326,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('praise
 |          3 | thdtjdgml415@naver.com   | 송성희     | 1234    | 19970415 | 1234567 |
 |          4 | mo0647@naver.com         | 김민정     | 1234    | 19970530 | 1234567 |
 |          5 | tjrwnsrkdtj@naver.com    | 김석준     | 1234    | 19941009 | 1234567 |
-|          6 | jwor124@naver.com        | 정은 비    | 1234    | 19990303 | 1234567 |
+|          6 | jwor124@naver.com        | 정은비     | 1234    | 19990303 | 1234567 |
 |          7 | leesh3432@naver.com      | 이영환     | 1234    | 19970205 | 1234567 |
 |          8 | kkk5993@naver.com        | 김성현     | 1234    | 19960617 | 1234567 |
 |          9 | sshin4882@naver.com      | 박현신     | 1234    | 19990303 | 1234567 |
@@ -352,6 +353,26 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('praise
 +------------+-------------------+------------+---------+----------+---------+
 1 row in set (0.00 sec)
 </code></pre>
+            <h4 class="pt20">myMemberID가 6번이 아닌 경우</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID &lt;> 6;
+
+</code></pre>
+            <h4 class="pt20">myMemberID가 5~10번인 경우</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID >=5 AND myMemberID &lt;=10;
+
+</code></pre>
+            <h4 class="pt20">myMemberID가 5~10번인 경우(범위조건)</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID BETWEEN 5 AND 10;
+
+</code></pre>
+            <h4 class="pt20">myMemberID가 5~10번이 아닌 경우(범위조건)</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID NOT BETWEEN 5 AND 10;
+
+</code></pre>
+            <h4 class="pt20">myMemberID(해당조건 불러오기)</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID IN(1, 4, 10, 14);
+
+</code></pre>
             <h4 class="pt20">email 중에 naver 텍스트를 포함하고 있는 경우</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youEmail LIKE '%naver%';
 +------------+------------------------+------------+---------+----------+---------+
@@ -361,7 +382,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('praise
 |          3 | thdtjdgml415@naver.com | 송성희     | 1234    | 19970415 | 1234567 |
 |          4 | mo0647@naver.com       | 김민정     | 1234    | 19970530 | 1234567 |
 |          5 | tjrwnsrkdtj@naver.com  | 김석준     | 1234    | 19941009 | 1234567 |
-|          6 | jwor124@naver.com      | 정은 비    | 1234    | 19990303 | 1234567 |
+|          6 | jwor124@naver.com      | 정은비     | 1234    | 19990303 | 1234567 |
 |          7 | leesh3432@naver.com    | 이영환     | 1234    | 19970205 | 1234567 |
 |          8 | kkk5993@naver.com      | 김성현     | 1234    | 19960617 | 1234567 |
 |          9 | sshin4882@naver.com    | 박현신     | 1234    | 19990303 | 1234567 |
@@ -373,16 +394,59 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('praise
 12 rows in set (0.00 sec)
 </code></pre>
 
-            <h3 id="intro6-3" class="page-header">데이터 수정하기</h3>
-            <div class="bs-callout bs-callout-info"></div>
-            <pre><code class="language-js">
+            <h4 class="pt20">email 중에 web 텍스트로 시작하는 경우</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE youEmail LIKE 'web%';
+
 </code></pre>
-            <h3 id="intro6-4" class="page-header">데이터 삭제하기</h3>
+            <h4 class="pt20">email 중에 web 텍스트로 끝나는 경우</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE youEmail LIKE '%com';
+
+</code></pre>
+
+            <h2 id="intro6-3" class="page-header">데이터 수정하기</h2>
+            <div class="bs-callout bs-callout-info">
+              UPDATE 테이블명(필드명) SET 컬럼명 조건
+            </div>
+            <pre><code class="language-js">
+
+</code></pre>
+            <h2 id="intro6-4" class="page-header">데이터 삭제하기</h2>
             <div class="bs-callout bs-callout-info"></div>
             <pre><code class="language-js">
+
 </code></pre>
           </div>
           <!-- intro6 -->
+          <div class="bs-docs-section">
+            <h2 id="intro7-3" class="page-header">테이블 수정하기</h2>
+            <h3 id="intro7-3" class="page-header">필드추가하기</h3>
+            <div class="bs-callout bs-callout-info">
+              ALTER TABLE 테이블명 ADD 추가할 필드명 AFTER 추가할위치
+            </div>
+            <h4>member 테이블 나이 뒤에 핸드폰 번호 필드를 추가</h4>
+            <pre><code class="language-js">ALTER TABLE member ADD youPhone int(20) NOT NULL AFTER youAge;
+
+
+  </code></pre>
+
+            <h4>member 테이블 핸드폰 번호 뒤에 성별 필드를 추가</h4>
+            <pre><code class="language-js">ALTER TABLE member ADD youGender enum('m', 'w', 'x') NOT NULL AFTER youAge;
+
+</code></pre>
+            <h3 id="intro7-4" class="page-header">필드 수정하기</h3>
+            <div class="bs-callout bs-callout-info">
+              ALTER TABLE 테이블명 MODIFY 수정할 필드명
+            </div>
+            <pre><code class="language-js">ALTER TABLE member MODIFY youAge int(10);
+</code></pre>
+            <h3 id="intro7-4" class="page-header">필드 삭제하기</h3>
+            <div class="bs-callout bs-callout-info">
+              ALTER TABLE 테이블명 MODIFY 삭제할 필드명
+            </div>
+            <pre><code class="language-js">ALTER TABLE member MODIFY youAge int(10);
+</code></pre>
+          </div>
+          <!-- intro7 -->
         </div>
         <!-- //col-md-9 -->
 
@@ -421,6 +485,11 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('praise
                 </ul>
               </li>
               <li><a href="#intro7">테이블 수정</a></li>
+              <ul class="nav">
+                <li><a href="#intro7-1">필드추가하기</a></li>
+                <li><a href="#intro7-2">필드수정하기</a></li>
+                <li><a href="#intro7-3">필드삭제하기</a></li>
+              </ul>
               <li><a href="#intro8">테이블 JOIN</a></li>
             </ul>
           </div>
