--- a/javascript/effect/mouseEffect01.html
+++ b/javascript/effect/mouseEffect01.html
@@ -29,16 +29,17 @@
         font-size: 2vw;
         line-height: 2;
         font-weight: 300;
+        text-align: center;
       }
 
       .mouse__wrap p:last-child {
-        font-size: 3vw;
+        font-size: 2vw;
         font-weight: 300;
       }
 
       .mouse__wrap p span {
-        border-bottom: 0.15vw dashed orange;
-        color: orange;
+        border-bottom: 0.15vw dashed #fff;
+        color: rgb(3, 247, 174);
       }
 
       .mouse__cursor {
@@ -49,25 +50,23 @@
         height: 50px;
         border-radius: 50%;
         border: 3px solid #fff;
+        z-index: 9999;
         background-color: rgba(255, 255, 255, 0.1);
         user-select: none;
         pointer-events: none;
-        /* perspective: 400px;
-            transform-style: preserve-3d; */
-        transition: background-color 0.3s, border-color 0.3s, transform 0.6s,
-          border-radius 0.6s;
+        transition: background-color 0.3s, border-color 0.3s, transform 0.6s;
       }
 
       .mouse__cursor.style1 {
-        background-color: rgba(255, 165, 0, 0.4);
-        border-color: orange;
-        transform: scale(2) rotateY(720deg);
+        background-color: rgba(6, 250, 217, 0.4);
+        border-color: rgb(6, 250, 217);
+        transform: scale(10) rotateY(720deg);
       }
 
       .mouse__cursor.style2 {
         background-color: rgba(140, 0, 255, 0.4);
         border-color: rgb(140, 0, 255);
-        transform: scale(1.5) rotateX(545deg);
+        transform: scale(3.5) rotateX(545deg);
       }
 
       .mouse__cursor.style3 {
@@ -77,20 +76,20 @@
       }
 
       .mouse__cursor.style4 {
-        background-color: rgba(0, 47, 255, 0.4);
-        border-color: rgb(0, 47, 255);
+        background-color: rgba(141, 160, 243, 0.4);
+        border-color: rgb(141, 160, 243);
         transform: scale(10);
       }
 
       .mouse__cursor.style5 {
-        background-color: rgba(255, 0, 85, 0.4);
-        border-color: rgb(255, 0, 85);
+        background-color: rgba(241, 164, 190, 0.4);
+        border-color: rgb(241, 164, 190);
         transform: scale(5) skew(40deg);
       }
 
       .mouse__cursor.style6 {
-        background-color: rgba(255, 81, 0, 0.4);
-        border-color: rgb(255, 81, 0);
+        background-color: rgba(95, 243, 139, 0.4);
+        border-color: rgb(95, 243, 139);
         transform: scale(5);
         border-radius: 0;
       }
@@ -120,7 +119,7 @@
       }
     </style>
   </head>
-  <body class="img07">
+  <body class="img02">
     <header id="header">
       <h1>Javascript Mouse Effect01</h1>
       <p>마우스 이펙트 - 마우스 따라다니기</p>
@@ -140,25 +139,23 @@
         <div class="mouse__cursor"></div>
         <div class="mouse__wrap">
           <p>
-            <span class="style1">가능해 보이는 것</span><br />
-            <span> 혹은 </span><br />
+            <span class="style1">가능해 보이는 것</span>
+            <span> 혹은 </span>
             <span>타당해 보이는 것</span>만<br />
-            선택한다면 <br />스스로가
+            선택한다면 스스로가
             <span class="style2"> 진정 원하는 것</span>을<br />
-            <span class="style3"
-              >알 수 없고 <br />
-              타협만 남는다..</span
-            >
+            <span class="style3">알 수 없고 타협만 남는다..</span>
           </p>
-
           <p>
-            If
-            <span class="style1"></span><span></span><span class="style2"></span
-            ><span></span><span class="style3"></span>
+            <span> If you limit your choices only to </span
+            ><span class="style4">what seems possible or reasonable</span>,
+            <br /><span>you disconnect your self from</span
+            ><span class="style5"> what you truly want</span>,<br />
+            <span class="style6"> and all that is left is a compromise..</span>
           </p>
         </div>
       </section>
-      <div class="mouseInfo">
+      <div class="mouse__Info">
         <ul>
           <li>clientX : <span class="clientX">0</span>px</li>
           <li>clientY : <span class="clientY">0</span>px</li>
@@ -396,103 +393,119 @@
       </div>
     </footer>
     <!-- //footer -->
+
     <script src="../assets/js/highlight.min.js"></script>
     <script src="../assets/js/common.js"></script>
+
     <script>
-           window.addEventListener("mousemove", (event) => {
-             document.querySelector("clientX").innerText = event.clientX;
-             document.querySelector("clientY").innerText = event.clientY;
-             document.querySelector("offsetX").innerText = event.offsetX;
-             document.querySelector("offsetY").innerText = event.offsetY;
-             document.querySelector("pageX").innerText = event.pageX;
-             document.querySelector("pageY").innerText = event.pageY;
-             document.querySelector("screenX").innerText = event.screenX;
-             document.querySelector("screenY").innerText = event.screenY;
-           });
-           const cursor = document.querySelector(".mouse__cursor");
-           window.addEventListener("mousemove", (e) => {
-             cursor.style.left = e.clientX - 25 + "px";
-             cursor.style.top = e.clientY - 25 + "px";
-           });
+      //마우스 좌표 출력
+      window.addEventListener("mousemove", (event) => {
+        document.querySelector("clientX").innerText = event.clientX; //골라서 넣어서 값이 나옴
+        document.querySelector("clientY").innerText = event.clientY;
+        document.querySelector("offsetX").innerText = event.offsetX;
+        document.querySelector("offsetY").innerText = event.offsetY;
+        document.querySelector("pageX").innerText = event.pageX;
+        document.querySelector("pageY").innerText = event.pageY;
+        document.querySelector("screenX").innerText = event.screenX;
+        document.querySelector("screenY").innerText = event.screenY;
+      });
 
-          //  document.querySelector(".style1").addEventListener("mouseover", () => {
-          //    cursor.classList.add(".style1");
-          //  });
-          //  document.querySelector(".style1").addEventListener("mouseout", () => {
-          //    cursor.classList.remove(".style1");
-          //  });
-          //  document.querySelector(".style2").addEventListener("mouseover", () => {
-          //    cursor.classList.add(".style2");
-          //  });
-          //  document.querySelector(".style2").addEventListener("mouseout", () => {
-          //    cursor.classList.remove(".style2");
-          //  });
-          //  document.querySelector(".style3").addEventListener("mouseover", () => {
-          //    cursor.classList.add(".style3");
-          //  });
-          //  document.querySelector(".style3").addEventListener("mouseout", () => {
-          //    cursor.classList.remove(".style3");
-          //  });
-          //  document.querySelector(".style4").addEventListener("mouseover", () => {
-          //    cursor.classList.add(".style4");
-          //  });
-          //  document.querySelector(".style4").addEventListener("mouseout", () => {
-          //    cursor.classList.remove(".style4");
-          //  });
-          //  document.querySelector(".style5").addEventListener("mouseover", () => {
-          //    cursor.classList.add(".style5");
-          //  });
-          //  document.querySelector(".style5").addEventListener("mouseout", () => {
-          //    cursor.classList.remove(".style5");
-          //  });
-          //  document.querySelector(".style6").addEventListener("mouseover", () => {
-          //    cursor.classList.add(".style6");
-          //  });
-          //  document.querySelector(".style6").addEventListener("mouseout", () => {
-          //    cursor.classList.remove(".style6");
-          //  });
+      //마우스 움직이기
 
-           //for문
-           // for (i = 0; i <=5; i++) {
-           //   document
-           //     .querySelector(".style" + i)
-           //     .addEventListener("mouseover", () => {
-           //       cursor.classList.add(".style" + i);
-           //     });
-           //   document
-           //     .querySelector(".style" + i)
-           //     .addEventListener("mouseout", () => {
-           //       cursor.classList.remove(".style" + i);
-           //     });
-           // }
+      window.addEventListener("mousemove", (e) => {
+        const cursor = document.querySelector(".mouse__cursor");
+        cursor.style.left = e.clientX - 25 + "px";
+        cursor.style.top = e.clientY - 25 + "px";
+      });
 
+      //  document.querySelector(".style1").addEventListener("mouseover", () => {
+      //    cursor.classList.add(".style1");
+      //  });
+      //  document.querySelector(".style1").addEventListener("mouseout", () => {
+      //    cursor.classList.remove(".style1");
+      //  });
+      //  document.querySelector(".style2").addEventListener("mouseover", () => {
+      //    cursor.classList.add(".style2");
+      //  });
+      //  document.querySelector(".style2").addEventListener("mouseout", () => {
+      //    cursor.classList.remove(".style2");
+      //  });
+      //  document.querySelector(".style3").addEventListener("mouseover", () => {
+      //    cursor.classList.add(".style3");
+      //  });
+      //  document.querySelector(".style3").addEventListener("mouseout", () => {
+      //    cursor.classList.remove(".style3");
+      //  });
+      //  document.querySelector(".style4").addEventListener("mouseover", () => {
+      //    cursor.classList.add(".style4");
+      //  });
+      //  document.querySelector(".style4").addEventListener("mouseout", () => {
+      //    cursor.classList.remove(".style4");
+      //  });
+      //  document.querySelector(".style5").addEventListener("mouseover", () => {
+      //    cursor.classList.add(".style5");
+      //  });
+      //  document.querySelector(".style5").addEventListener("mouseout", () => {
+      //    cursor.classList.remove(".style5");
+      //  });
+      //  document.querySelector(".style6").addEventListener("mouseover", () => {
+      //    cursor.classList.add(".style6");
+      //  });
+      //  document.querySelector(".style6").addEventListener("mouseout", () => {
+      //    cursor.classList.remove(".style6");
+      //  });
 
-           // const mouseStyle = document.querySelectorAll(".mouse__wrap .style")
-           //forEach문
-           forEach((el) => {
-             document
-               .querySelector(".style" + el)
-               .addEventListener("mouseover", () => {
-                 cursor.classList.add(".style" + el);
-               });
-             document
-               .querySelector(".style" + el)
-               .addEventListener("mouseout", () => {
-                 cursor.classList.remove(".style" + el);
-               });
-           });
+      //for문
+      // for (let i = 0; i <= 5; i++) {
+      //   document
+      //     .querySelectorAll(".style" + i)
+      //     .addEventListener("mouseover", () => {
+      //       cursor.classList.add(".style" + i);
+      //     });
+      //   document
+      //     .querySelectorAll(".style" + i)
+      //     .addEventListener("mouseout", () => {
+      //       cursor.classList.remove(".style" + i);
+      //     });
+      // }
 
-           //forEach문
-           document
-               .querySelectorAll(".mouse__wrap p span").forEach((span, num)=>{
-                 span.addEventListener("mouseover", ()=>{})
-               })
+      const mouseStyle = document.querySelectorAll(".mouse__wrap.span");
+      // // forEach문
+      // forEach((el) => {
+      //   document
+      //     .querySelector(".style" + el)
+      //     .addEventListener("mouseover", () => {
+      //       cursor.classList.add(".style" + el);
+      //     });
+      //   document
+      //     .querySelector(".style" + el)
+      //     .addEventListener("mouseout", () => {
+      //       cursor.classList.remove(".style" + el);
+      //     });
+      // });
 
-      //forEach문
-      document
-               .querySelectorAll(".mouse__wrap p span").forEach((span=>{
-                 let attr
-               }
+      // // foreach문;
+      // document.querySelectorAll(".mouse__wrap span").forEach((span, num) => {
+      //   span.addEventListener("mouseover", () => {
+      //     cursor.classList.add(".style" + (num + 1));
+      //   });
+      //   span.addEventListener("mouseout", () => {
+      //     cursor.classList.remove(".style" + (num + 1));
+      //   });
+      // });
+
+      // //forEach문
+      document.querySelectorAll(".mouse__wrap span").forEach((span) => {
+        const spanClass = span.getAttribute("class");
+        span.addEventListener("mouseover", () => {
+          const cursor = document.querySelector(".mouse__cursor");
+          cursor.classList.add(spanClass);
+        });
+        span.addEventListener("mouseout", () => {
+          const cursor = document.querySelector(".mouse__cursor");
+          cursor.classList.remove(spanClass);
+        });
+      });
     </script>
   </body>
 </html>
