--- a/site1/index.html
+++ b/site1/index.html
@@ -38,14 +38,14 @@
 
   <body>
     <div id="skip">
-      <a href="#">헤더 </a>
-      <a href="#">슬라이더</a>
-      <a href="#">이미지</a>
-      <a href="#">이미지텍스트</a>
-      <a href="#">카드</a>
-      <a href="#">배너</a>
-      <a href="#">텍스트</a>
-      <a href="#">푸터</a>
+      <a href="#">헤더 영역 바로가기</a>
+      <a href="#">슬라이드 영역 바로가기</a>
+      <a href="#">이미지 영역 바로가기</a>
+      <a href="#">이미지/텍스트 영역 바로가기</a>
+      <a href="#">카드 영역 바로가기</a>
+      <a href="#">배너 영역 바로가기</a>
+      <a href="#">텍스트 영역 바로가기</a>
+      <a href="#">푸터 영역 바로가기</a>
     </div>
     <!-- //skip -->
 
